fix menu align

--- a/css/componment/frame.search.less
+++ b/css/componment/frame.search.less
@@ -5,7 +5,11 @@
     width: 212px;
     padding:3px;
 }
+
+#searchform{
+	text-align: left;
+}
+
 #searchform #s {
     width:160px;
-    text-align: left;
 }
